# fahhh

./: Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs
src/init/: fahhh.bash  fahhh.fish  fahhh.zsh  mod.rs
