[package]
name = "fahhh"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/arghyadipchak/fahhh"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rodio = { version = "0.22.1", default-features = false, features = [
  "mp3",
  "playback",
] }
thiserror = "2.0.18"

[profile.release]
codegen-units = 1
lto = true
strip = true
